Remove hover image on Google sign in to avoid flickering

--- a/src/client/public/styles.css
+++ b/src/client/public/styles.css
@@ -64,7 +64,6 @@ h1 {
 .btn-google:hover {
   cursor: pointer;
   cursor: hand;
-  content: url("/public/images/btn_google_signin_light_focus_web@2x.png");
 }
 
 .profile-pic {
